--- a/themes/custom/login/theme.properties
+++ b/themes/custom/login/theme.properties
@@ -1,4 +1,5 @@
 parent=keycloak
 import=common/keycloak
 
-styles=node_modules/patternfly/dist/css/patternfly.css node_modules/patternfly/dist/css/patternfly-additions.css lib/zocial/zocial.css css/login.css css/styles.css
+styles=fonts/icomoon/style.css css/owl.carousel.min.css css/bootstrap.min.css css/style.css
+scripts=js/jquery-3.3.1.min.js js/popper.min.js js/bootstrap.min.js js/main.js
