--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,5 +29,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: "1.0.0"
+          tags: ${{ steps.meta.outputs.tags }} "1.0.0"
           labels: ${{ steps.meta.outputs.labels }}
