--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ name: Publish Docker image
 on:
   push:
     branches: [master]
+    paths-ignore:
+      - '**/README.md'
 
 jobs:
   push_to_registry:
