--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,3 +36,10 @@ services:
       - ./themes/custom:/opt/jboss/keycloak/themes/custom
     depends_on:
       - postgres
+
+  maildev:
+    container_name: maildev
+    image: djfarrelly/maildev:1.0.0-rc2
+    ports:
+      - 9999:80
+      - 25
